Added metrics to the settings

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -27,6 +27,7 @@
         "FILE_LOCATION": "File location",
         "OFFSET": "Offset"
       },
+      "SI_METRICS": "SI Metrics",
       "NIGHT_THEME": "Night mode",
       "SERVER_URL": "Server url"
     },
