Refactored the sheet roundtrip code. Removed the server

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -44,6 +44,7 @@
     "ABOUT": "About",
     "EDIT" : "Edit sheet",
     "LOCK" : "Lock sheet",
+    "NEW" : "New sheet",
     "OPEN": "Open sheet",
     "SETTINGS": "Settings",
     "THROW_DICE": "Throw dice"
