Added a component for the no-sheet-loaded thingy

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -50,6 +50,7 @@
     "THROW_DICE": "Throw dice"
   },
   "MESSAGE": {
+    "NO_SHEET_LOADED": "No sheet loaded. Please use the menu to create or load a sheet.",
     "SHEET_LOADED": "Loaded Character Sheet: {{value}}"
   },
   "SHEET": {
