Added the lastModified field to the view

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -179,7 +179,8 @@
       "PLAYER_INFORMATION": "Player Information",
       "PLAYER": "Player",
       "CAMPAIGN": "Campaign",
-      "CREATED_ON": "Created on"
+      "CREATED_ON": "Created on",
+      "LAST_MODIFIED": "Last modified"
     },
     "POINTS": {
       "POINTS": "Points",
