Added a load sheet button to the select-sheet component

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -57,7 +57,8 @@
     }
   },
   "SELECT_SHEET": {
-    "CREATE_NEW" : "Create a new Character sheet"
+    "CREATE_NEW" : "Create a new Character sheet",
+    "LOAD_FROM_FILE" : "Load a sheet from local file system"
   },
   "SHEET": {
     "ADVANTAGES": {
