--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,8 +17,9 @@
     "OPEN_SHEET": {
       "HEADER": "Open Character Sheet",
       "INVALID_SHEET": "Invalid sheet",
-      "PREVIOUSLY": "Previously opened",
-      "SELECT_FROM_FILE": "Select a sheet"
+      "SELECT_FROM_FILE": "Select a sheet",
+      "ALREADY_LOADED_NEWER_VERSION": "A newer version of this sheet has already been loaded. The newer version will be overwritten.",
+      "ALREADY_LOADED_OLDER_VERSION": "An older version of this sheet has already been loaded. The old version will be overwritten."
     },
     "SETTINGS": {
       "HEADER": "Settings",
