[enhancement] Added menu option to deletethe current sheet

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -34,6 +34,7 @@
       "CLOSE": "Close sheet",
       "NEW": "New sheet",
       "OPEN": "Open sheet",
+      "DELETE": "Delete sheet",
       "DOWNLOAD": "Download sheet",
       "SHEET": "Sheet"
     },
