[library] Updated @angular/material and @angular/cdk to beta.11 and required fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -185,7 +185,7 @@
       "QUIRKS": "Quirks",
       "SKILLS": "Skills",
       "SPELLS": "Spells",
-      "EARNED": "Earned"
+      "UNSPENT": "Unspent"
     },
     "PORTRAIT": {
       "PORTRAIT": "Portrait"
