[enhancement] Added the selected unit system as metadata to the template

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -12,7 +12,8 @@
       "RETHROW": "Throw again"
     },
     "NEW_SHEET": {
-      "HEADER": "Create a new Character Sheet"
+      "HEADER": "Create a new Character Sheet",
+      "UNIT": "Unit"
     },
     "OPEN_SHEET": {
       "SELECT_FROM_FILE": "Open sheet",
