--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,7 +13,7 @@
     },
     "NEW_SHEET": {
       "HEADER": "Create a new Character Sheet",
-      "UNIT": "Unit"
+      "UNIT": "Unit System"
     },
     "OPEN_SHEET": {
       "SELECT_FROM_FILE": "Open sheet",
@@ -22,7 +22,6 @@
     },
     "SETTINGS": {
       "HEADER": "Settings",
-      "SI_METRICS": "Use SI Metrics",
       "NIGHT_THEME": "Night mode"
     }
   },
@@ -208,5 +207,14 @@
     "MAGIC": "Magic",
     "NOTES": "Notes",
     "SKILLS": "Skills"
+  },
+  "UNIT": {
+    "METRIC": {
+      "WEIGHT": "kg"
+    },
+    "IMPERIAL" : {
+      "WEIGHT": "lb"
+
+    }
   }
 }
