--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -209,10 +209,14 @@
     "SKILLS": "Skills"
   },
   "UNIT": {
+    "metric": "Metric system (e.g. kg, m)",
     "METRIC": {
+      "HEIGHT": "m",
       "WEIGHT": "kg"
     },
+    "imperial": "Imperial system (e.g. lb, \")",
     "IMPERIAL" : {
+      "HEIGHT": "\"",
       "WEIGHT": "lb"
 
     }
