[refactor] Moved the Theme slider to the sidenavigation

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -203,7 +203,10 @@
     "DIS_ADVANTAGES": "(Dis)Advantages",
     "EQUIPMENT": "Equipment",
     "GENERAL": "General",
-    "LIBRARY": "Library",
+    "LIBRARY": {
+      "LIBRARY": "Library",
+      "GURPS_LITE": "Gurps lite"
+    },
     "MAGIC": "Magic",
     "NOTES": "Notes",
     "SKILLS": "Skills"
